syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cleo.clarify.server.clusterstatus";
option java_outer_classname = "ClusterStatusProto";

package clusterstatus;

service ClusterStatus {
	rpc ListHosts (HostsRequest) returns (stream HostReply) {}
}

message HostsRequest {}

message HostReply {
	string hostname = 1;
	int32 port = 2;

	enum HostStatus {
		STOPPED = 0;
		PENDING = 1;
		MIXED = 2;
		STARTED = 3;
	}

	HostStatus status = 3;
}